--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -25,5 +25,31 @@ jobs:
         env: 
           ARTIFACT_REGISTRY: ${{ secrets.ARTIFACT_REGISTRY }}
         run: | 
-          docker build -t ${{ secrets.ARTIFACT_REGISTRY }}/myapp:latest .
-          docker push ${{ secrets.ARTIFACT_REGISTRY }}/myapp:latest
+          docker build -t ${{ secrets.ARTIFACT_REGISTRY }}/myappback:latest .
+          docker push ${{ secrets.ARTIFACT_REGISTRY }}/myappback:latest
+
+  Deploy:
+      needs: Build
+      runs-on: ubuntu-latest
+
+      steps:
+        - name: Checkout Repo
+          uses: actions/checkout@v2
+
+        - name: Auth GCP AppEngine
+          env:
+            GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          uses: 'google-github-actions/auth@v0'
+          with:
+            credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+
+        - name: Deploy to App Engine
+          id: appengine
+          env: 
+            ARTIFACT_REGISTRY: ${{ secrets.ARTIFACT_REGISTRY }}
+          uses: 'google-github-actions/deploy-appengine@v0'
+          with:
+            image_url: ${{ secrets.ARTIFACT_REGISTRY }}/myappback:latest
+
+        - name: Prod Test
+          run: 'curl "${{ steps.appengine.outputs.url }}"' 
