--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -36,20 +36,16 @@ jobs:
         - name: Checkout Repo
           uses: actions/checkout@v2
 
-        - name: Auth GCP AppEngine
+        - name: Auth GCP Cloud Run
           env:
             GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
           uses: 'google-github-actions/auth@v0'
           with:
             credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
 
-        - name: Deploy to App Engine
-          id: appengine
-          env: 
-            ARTIFACT_REGISTRY: ${{ secrets.ARTIFACT_REGISTRY }}
-          uses: 'google-github-actions/deploy-appengine@v0'
-          with:
-            image_url: ${{ secrets.ARTIFACT_REGISTRY }}/myappback:latest
-
-        - name: Prod Test
-          run: 'curl "${{ steps.appengine.outputs.url }}"' 
+        - name: Deploy
+          run: |
+            gcloud run deploy myappback --image gcr.io/${{ secrets.ARTIFACT_REGISTRY }}/myappback:latest \
+            --platform managed \
+            --allow-unauthenticated \
+            --memory 512M
